tests/typechecker/should_fail/duplicate_modules.csp
module M
exports
endmodule

module M
exports
endmodule
